--- a/frontend/src/compnents/AITherapist/Therapist.css
+++ b/frontend/src/compnents/AITherapist/Therapist.css
@@ -1,17 +1,18 @@
 .therapist-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 800px;
-    margin: 0 auto;
-    height: 80vh;
-    padding: 20px;
-    background-color: #FAFAEB;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 100px;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 840px;
+  margin: 0 auto;
+  padding: 20px;
+  background: linear-gradient(to right, #D1D5DB, #E5E7EB, #F3F4F6); /* Gradient from gray-100 to gray-300 */
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 100px;
+}
+
+
   
   .heading {
     font-size: 2rem;
@@ -31,7 +32,9 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    height: 50vh; /* Adjusted height to 70vh */
   }
+  
   
   .message {
     padding: 10px;
